k8s/apps/prod/blog/ghost-analytics-stip-url.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-ghost-analytics
  namespace: blog
spec:
  stripPrefix:
    prefixes:
      - /.ghost/analytics
