k8s/apps/prod/blog/ghost-analytics-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-analytics
  namespace: blog
  labels:
    app: ghost-analytics

spec:
  # If you want HA for your Ghost instance, you can increase the number of replicas AFTER creation and you need to adjust the storage class. See 02-pvc.yaml for more information.
  replicas: 1
  selector:
    matchLabels:
      app: ghost-analytics
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  revisionHistoryLimit: 4
  progressDeadlineSeconds: 600
  template:
    metadata:
      namespace: ghost-analytics
      labels:
        app: ghost-analytics
    spec:
      automountServiceAccountToken: false # Disable automounting of service account token
      volumes:
        - name: traffic-analytics-data
          persistentVolumeClaim:
            claimName: traffic-analytics-pvc
      containers:
        - name: tinybird-analytics
          image: ghost/traffic-analytics:1.0.463
          imagePullPolicy: Always
          ports:
            - name: tb-analytics
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: traffic-analytics-data
              mountPath: /data
              readOnly: false
