k8s/apps/prod/blog/ghost-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-on-kubernetes
  namespace: blog
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: "5.92"
    app.kubernetes.io/component: ghost
    app.kubernetes.io/part-of: ghost-on-kubernetes

spec:
  # If you want HA for your Ghost instance, you can increase the number of replicas AFTER creation and you need to adjust the storage class. See 02-pvc.yaml for more information.
  replicas: 1
  selector:
    matchLabels:
      app: ghost-on-kubernetes
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  revisionHistoryLimit: 4
  progressDeadlineSeconds: 600
  template:
    metadata:
      namespace: ghost-on-kubernetes
      labels:
        app: ghost-on-kubernetes
    spec:
      automountServiceAccountToken: false # Disable automounting of service account token
      volumes:
        - name: k8s-ghost-content
          persistentVolumeClaim:
            claimName: k8s-ghost-content
        - name: k8s-ghost-config
          emptyDir: {}
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi

      containers:
        - name: ghost-on-kubernetes
          image: ghcr.io/sredevopsorg/ghost-on-kubernetes:main
          imagePullPolicy: Always
          ports:
            - name: ghk8s
              containerPort: 2368
              protocol: TCP

          # You should uncomment the following lines in production. Change the values according to your environment.
          readinessProbe:
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk8s
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: Host
                  value: blog.oplabs.us
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk8s
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: Host
                  value: blog.oplabs.us
            periodSeconds: 300
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 1
            initialDelaySeconds: 30

          volumeMounts:
            - name: k8s-ghost-content
              mountPath: /home/nonroot/app/ghost/content
              readOnly: false
            - name: k8s-ghost-config
              mountPath: /home/nonroot/app/ghost/config.production.json
              subPath: config.production.json
              readOnly: false
            - name: tmp # This is the temporary volume mount to allow loading themes
              mountPath: /tmp
              readOnly: false
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532

      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
      # # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: node-role.kubernetes.io/worker
      #               operator: In
      #               values:
      #                 - "true"
      securityContext: {}
