k8s/apps/prod/blog/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.oplabs.us`) && PathPrefix(`/`)
      kind: Rule
      middlewares: []
        # - name: local-ip-list
        #   namespace: traefik
      services:
        - name: blog
          port: ghk8s
    - match: Host(`blog.oplabs.us`) && PathPrefix(`/ghost`)
      kind: Rule
      middlewares:
        - name: local-ip-list
          namespace: traefik
      services:
        - name: blog
          port: ghk8s
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
